--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  background-color: #000213;
+  color: #ffffff;
+  text-align: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +16,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
