--- a/src/components/ButtonLevel/ButtonLevel.scss
+++ b/src/components/ButtonLevel/ButtonLevel.scss
@@ -1,11 +1,15 @@
-.button-level{
+.button-level {
     margin: .5rem;
+    width: 5em;
+    border: #ffffff solid 1px;
 
-    .button-level__button{
+    .button-level__button {
         width: 100%;
         height: 100%;
+        color: #ffffff;
+        text-decoration: none;
 
-        .button-level__text{
+        .button-level__text {
             font-size: 22px;
             margin: .5rem;
         }
