--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,10 +1,14 @@
 .home{
     .button-home{
         margin: .5rem;
+        width: 5em;
+        border: #ffffff solid 1px;
     
         .button-home__button{
             width: 100%;
             height: 100%;
+            color: #ffffff;
+            text-decoration: none;
     
             .button-home__text{
                 font-size: 22px;
