--- a/src/components/ButtonLevel/ButtonLevel.scss
+++ b/src/components/ButtonLevel/ButtonLevel.scss
@@ -1,17 +1,29 @@
 .button-level {
     margin: .5rem;
-    width: 5em;
-    border: #ffffff solid 1px;
+    width: 6em;
+    border: #ffffff solid 3px;
 
     .button-level__button {
         width: 100%;
         height: 100%;
-        color: #ffffff;
         text-decoration: none;
 
         .button-level__text {
-            font-size: 22px;
+            font-size: 20px;
+            font-weight: 700;
             margin: .5rem;
+            color: #ffffff;
+        }
+    }
+
+    &.completed {
+        border: #00b8f0 solid 3px;
+        color: #00b8f0;
+
+        .button-level__button {
+            .button-level__text {
+                color: #00b8f0;
+            }
         }
     }
 }
