--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,19 +1,18 @@
-.input__container{
+.input__container {
     width: 100%;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    & .input__paddock{
-        background-color: aqua;
+    & .input__paddock {
         border-radius: 50%;
         width: 3em;
         height: 3em;
         position: relative;
         margin: .5em;
 
-        & .input__paddock-icon{
+        & .input__paddock-icon {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -25,11 +24,16 @@
             justify-content: center;
             align-items: center;
             transition: all 0.3s;
-            font-size: 1.5em;
+            font-size: 1.8em;
+            color: #00b8f0;
+
+            &.completed {
+                color: #02fe03;
+            }
         }
     }
 
-    & .input__input{
+    & .input__input {
         width: 100%;
         max-width: 500px;
         height: 2em;
@@ -44,17 +48,17 @@
         margin: .5em;
         text-align: center;
 
-        &::placeholder{
+        &::placeholder {
             text-align: center;
         }
 
-        &:focus{
+        &:focus {
             border-bottom: 2px solid #fff;
         }
     }
 
-    & .input__button{
-        background-color: aqua;
+    & .input__button {
+        background-color: #00b8f0;
         border-radius: 50%;
         width: 3em;
         height: 3em;
@@ -62,7 +66,7 @@
         margin: .5em;
         border: none;
 
-        & .input__button-icon{
+        & .input__button-icon {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -74,8 +78,8 @@
             justify-content: center;
             align-items: center;
             transition: all 0.3s;
-            font-size: 1.5em;
-            color: #fff;
+            font-size: 1.8em;
+            color: #000213;
         }
     }
 }
