--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,18 +1,19 @@
-.home{
-    .button-home{
+.home {
+    .button-home {
         margin: .5rem;
-        width: 5em;
-        border: #ffffff solid 1px;
-    
-        .button-home__button{
+        width: 9em;
+        border: #ffffff solid 3px;
+
+        .button-home__button {
             width: 100%;
             height: 100%;
-            color: #ffffff;
             text-decoration: none;
-    
-            .button-home__text{
-                font-size: 22px;
+
+            .button-home__text {
+                font-size: 20px;
+                font-weight: 700;
                 margin: .5rem;
+                color: #ffffff;
             }
         }
     }
