--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,15 +1,20 @@
-.home__container {
-    .home__button-container {
+.nav__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
+
+    .nav__div-button {
         margin: .5rem;
-        width: 7em;
+        width: 5em;
         border: #ffffff solid 3px;
 
-        .home__button {
+        .nav__button {
             width: 100%;
             height: 100%;
             text-decoration: none;
 
-            .home__button-text {
+            .nav__button-text {
                 font-size: 16px;
                 font-weight: 700;
                 margin: .5rem;
