--- a/src/pages/SelectLevel/SelectLevel.scss
+++ b/src/pages/SelectLevel/SelectLevel.scss
@@ -1,26 +1,35 @@
-.div-button {
-    margin: .5rem;
-    width: 5em;
-    border: #ffffff solid 3px;
+.select-level__container {
+    .select-level__nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0.5rem 1rem;
 
-    .button {
-        width: 100%;
-        height: 100%;
-        text-decoration: none;
-
-        .button-text {
-            font-size: 16px;
-            font-weight: 700;
+        .select-level__div-button {
             margin: .5rem;
-            color: #ffffff;
+            width: 5em;
+            border: #ffffff solid 3px;
+
+            .select-level__button {
+                width: 100%;
+                height: 100%;
+                text-decoration: none;
+
+                .select-level__button-text {
+                    font-size: 16px;
+                    font-weight: 700;
+                    margin: .5rem;
+                    color: #ffffff;
+                }
+            }
         }
     }
-}
 
-.select-level {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    .select-level__levels {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
 }
