--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,30 @@
 .home__container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .home__title-div {
+        .home__title {
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: #fff;
+            margin-bottom: 1rem;
+
+            .home__title-brain {
+                background-color: #fff;
+                color: #000213;
+                padding: .1rem .3rem;
+            }
+
+            .home__title-es{
+                font-size: 14px;
+            }
+        }
+    }
+
     .home__button-container {
         margin: .5rem;
         width: 7em;
