--- a/src/components/Level4/Level4.scss
+++ b/src/components/Level4/Level4.scss
@@ -13,7 +13,7 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        margin-top: .5em;
+        padding: .8em 1em;
 
         & .level4__file {
             font-size: 20px;
