--- a/src/components/Level2/Level2.scss
+++ b/src/components/Level2/Level2.scss
@@ -13,7 +13,7 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        margin-top: .5em;
+        padding: .8em 1em;
 
         & .level2__file {
             font-size: 20px;
@@ -35,9 +35,5 @@
         width: 100%;
         font-size: 24px;
         font-weight: bold;
-
-        & .level2__guess {
-            
-        }
     }
 }
