--- a/src/components/Level5/Level5.scss
+++ b/src/components/Level5/Level5.scss
@@ -7,13 +7,13 @@
     align-items: center;
 
     & .level5__puzzle {
-        width: 100%;
+        width: calc(100% - 2em);
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        margin-top: .5em;
+        padding: .8em 1em;
 
         & .level5__file {
             font-size: 20px;
@@ -36,9 +36,5 @@
         width: 100%;
         font-size: 24px;
         font-weight: bold;
-
-        & .level5__guess {
-            
-        }
     }
 }
