--- a/src/components/ButtonLevel/ButtonLevel.scss
+++ b/src/components/ButtonLevel/ButtonLevel.scss
@@ -3,12 +3,12 @@
     width: 6em;
     border: #ffffff solid 3px;
 
-    .button-level__button {
+    & .button-level__button {
         width: 100%;
         height: 100%;
         text-decoration: none;
 
-        .button-level__text {
+        & .button-level__text {
             font-size: 20px;
             font-weight: 700;
             margin: .5rem;
@@ -20,8 +20,8 @@
         border: #00b8f0 solid 3px;
         color: #00b8f0;
 
-        .button-level__button {
-            .button-level__text {
+        & .button-level__button {
+            & .button-level__text {
                 color: #00b8f0;
             }
         }
