--- a/src/components/TipPopup/TipPopup.scss
+++ b/src/components/TipPopup/TipPopup.scss
@@ -58,8 +58,31 @@
                 border: #ffffff solid 3px;
                 display: flex;
                 flex-direction: column;
-                justify-content: start;
-                align-items: center;
+                justify-content: space-evenly;
+                align-items: flex-start;
+                cursor: pointer;
+                word-wrap: break-word;
+                margin: .5em;
+                padding: .5em;
+                width: 27.6em;
+                height: 4.6em;
+
+                & .tip__tip-text{
+                    display: none;
+                }
+
+                & .tip__tip-clue {
+                    display: none;
+                    text-align: left;
+                }
+
+                & .active{
+                    display: initial
+                }
+
+                &.active{
+                    border: #00b8f0 solid 3px;
+                }
             }
         }
     }
@@ -70,6 +93,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #ddddddb4;
+        background-color: #25252593;
+        cursor: pointer;
     }
 }
