--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -65,6 +65,7 @@
         position: relative;
         margin: .5em;
         border: none;
+        cursor: pointer;
 
         & .input__button-icon {
             position: absolute;
