--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,3 +1,14 @@
+$breakpoints:(sm: 540px,
+    md: 768px,
+    xl: 1200px,
+);
+
+@mixin media-up($breakpoint) {
+    @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+    }
+}
+
 .home__container {
     width: 100vw;
     height: 100vh;
@@ -8,10 +19,14 @@
 
     & .home__title-div {
         & .home__title {
-            font-size: 2.5rem;
+            font-size: 2rem;
             font-weight: bold;
             color: #fff;
             margin-bottom: 1rem;
+
+            @include media-up(md) {
+                font-size: 2.5rem;
+            }
 
             & .home__title-brain {
                 background-color: #fff;
@@ -36,8 +51,12 @@
             & .home__button-text {
                 font-size: 16px;
                 font-weight: 700;
-                margin: .5rem;
+                margin: .3em .1em;
                 color: #ffffff;
+
+                @include media-up(md) {
+                    margin: .5rem;
+                }
             }
         }
     }
