--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,6 @@ body {
   text-align: center;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
 }
