--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,3 +1,14 @@
+$breakpoints:(sm: 540px,
+    md: 768px,
+    xl: 1200px,
+);
+
+@mixin media-up($breakpoint) {
+    @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+    }
+}
+
 .input__container {
     width: 100%;
     display: flex;
@@ -10,7 +21,10 @@
         width: 3em;
         height: 3em;
         position: relative;
-        margin: .5em;
+
+        @include media-up(md) {
+            margin: .5rem;
+        }
 
         & .input__paddock-icon {
             position: absolute;
