--- a/src/components/Level1/Level1.scss
+++ b/src/components/Level1/Level1.scss
@@ -61,12 +61,13 @@ $breakpoints:(sm: 350px,
     }
 
     & .level1__guess-container {
-        margin: 1em 0;
+        margin: .5em 0;
         width: 100%;
         font-size: 18px;
         font-weight: bold;
 
         @include media-up(md) {
+            margin: 1em 0;
             font-size: 24px;
         }
     }
