--- a/src/components/Level3/Level3.scss
+++ b/src/components/Level3/Level3.scss
@@ -1,3 +1,14 @@
+$breakpoints:(sm: 350px,
+    md: 768px,
+    xl: 1200px,
+);
+
+@mixin media-up($breakpoint) {
+    @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+    }
+}
+
 .level3__container {
     width: 100%;
     height: 100%;
@@ -13,11 +24,23 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        padding: .8em 1em;
+        padding: .3em .8em;
+
+        @include media-up(md) {
+            padding: .8em 1em;
+        }
 
         & .level3__file {
-            font-size: 20px;
+            font-size: 14px;
             margin-top: .5em;
+
+            @include media-up(sm) {
+                font-size: 18px;
+            }
+
+            @include media-up(md) {
+                font-size: 20px;
+            }
 
             & .level3__letter {
                 margin-bottom: 1px;
@@ -25,15 +48,28 @@
 
             & .level3__clue {
                 border: #ffffff solid 1px;
-                width: 3rem;
+                width: 2rem;
+
+                @include media-up(sm) {
+                    width: 2.5rem;
+                }
+
+                @include media-up(md) {
+                    width: 3rem;
+                }
             }
         }
     }
 
     & .level3__guess-container{
-        margin: 1em 0;
+        margin: .5em 0;
         width: 100%;
-        font-size: 24px;
+        font-size: 18px;
         font-weight: bold;
+
+        @include media-up(md) {
+            margin: 1em 0;
+            font-size: 24px;
+        }
     }
 }
