--- a/src/components/Level5/Level5.scss
+++ b/src/components/Level5/Level5.scss
@@ -1,3 +1,14 @@
+$breakpoints:(sm: 350px,
+    md: 768px,
+    xl: 1200px,
+);
+
+@mixin media-up($breakpoint) {
+    @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+    }
+}
+
 .level5__container {
     width: 100%;
     height: 100%;
@@ -13,11 +24,23 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        padding: .8em 1em;
+        padding: .3em .8em;
+
+        @include media-up(md) {
+            padding: .8em 1em;
+        }
 
         & .level5__file {
-            font-size: 20px;
+            font-size: 14px;
             margin-top: .5em;
+
+            @include media-up(sm) {
+                font-size: 18px;
+            }
+
+            @include media-up(md) {
+                font-size: 20px;
+            }
 
             & .level5__letter {
                 margin-bottom: 1px;
@@ -25,16 +48,21 @@
 
             & .level5__clue {
                 border: #ffffff solid 1px;
-                min-width: 1.2em;
-                padding: .1em .6em;
+                min-width: 1rem;
+                padding: .1rem .6rem;
             }
         }
     }
 
     & .level5__guess-container{
-        margin: 1em 0;
+        margin: .5em 0;
         width: 100%;
-        font-size: 24px;
+        font-size: 18px;
         font-weight: bold;
+
+        @include media-up(md) {
+            margin: 1em 0;
+            font-size: 24px;
+        }
     }
 }
