--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -10,16 +10,29 @@ $breakpoints:(sm: 540px,
 }
 
 .nav__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 1rem;
+    position: relative;
+    padding: .5rem 1rem;
+    width: calc(100% - 2rem);
+    height: 5rem;
 
-    & .nav__links-container,
+    & .nav__links-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        top: 50%;
+        left: 1rem;
+        transform: translateY(-50%);
+    }
+
     & .nav__tips-container {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        position: absolute;
+        top: 50%;
+        right: 1rem;
+        transform: translateY(-50%);
     }
 
     & .nav__button {
@@ -65,6 +78,10 @@ $breakpoints:(sm: 540px,
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
         @include media-up(md) {
             flex-direction: row;
@@ -78,6 +95,11 @@ $breakpoints:(sm: 540px,
     }
 
     & .nav__tips-container {
+        position: absolute;
+        top: 50%;
+        right: .5rem;
+        transform: translateY(-50%);
+
         & .nav__score-points {
             display: none;
 
