--- a/src/components/Level8/Level8.scss
+++ b/src/components/Level8/Level8.scss
@@ -1,3 +1,14 @@
+$breakpoints:(sm: 350px,
+    md: 768px,
+    xl: 1200px,
+);
+
+@mixin media-up($breakpoint) {
+    @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+    }
+}
+
 .level8__container {
     width: 100%;
     height: 100%;
@@ -13,11 +24,23 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        padding: .8em 1em;
+        padding: .3em .8em;
+
+        @include media-up(md) {
+            padding: .8em 1em;
+        }
 
         & .level8__file {
-            font-size: 20px;
+            font-size: 14px;
             margin-top: .5em;
+
+            @include media-up(sm) {
+                font-size: 18px;
+            }
+
+            @include media-up(md) {
+                font-size: 20px;
+            }
 
             & .level8__letter {
                 margin-bottom: 1px;
@@ -25,28 +48,68 @@
 
             & .level8__clue {
                 border: #ffffff solid 1px;
-                width: 3.2em;
-                height: 1.5em;
+                width: 2rem;
+                height: 1rem;
+
+                @include media-up(sm) {
+                    width: 2.5rem;
+                    height: 1.5rem;
+                }
+
+                @include media-up(md) {
+                    width: 3.2rem;
+                    height: 1.5rem;
+                }
             }
         }
     }
 
     & .level8__guess-container {
-        margin: 1em 0;
+        margin: .5em 0;
         width: 100%;
-        font-size: 24px;
+        font-size: 18px;
         font-weight: bold;
+
+        @include media-up(md) {
+            margin: 1em 0;
+            font-size: 24px;
+        }
 
         & .level8__guess {
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            flex-wrap: wrap;
 
             & div {
-                width: 3.2em;
-                height: 1.5em;
                 margin: 0 .35em;
+                width: 2rem;
+                height: 1rem;
+
+                @include media-up(sm) {
+                    width: 2.5rem;
+                    height: 1.5rem;
+                }
+
+                @include media-up(md) {
+                    width: 3.2rem;
+                    height: 1.5rem;
+                }
+            }
+
+            & span {
+                margin: 0 .35em;
+                width: 3rem;
+                height: 2rem;
+
+                @include media-up(sm) {
+                    width: 3.3rem;
+                }
+
+                @include media-up(md) {
+                    width: 4rem;
+                }
             }
         }
     }
