--- a/src/components/Level9/Level9.scss
+++ b/src/components/Level9/Level9.scss
@@ -1,3 +1,14 @@
+$breakpoints:(sm: 350px,
+    md: 768px,
+    xl: 1200px,
+);
+
+@mixin media-up($breakpoint) {
+    @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+    }
+}
+
 .level9__container {
     width: 100%;
     height: 100%;
@@ -13,23 +24,35 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        padding: .8em 1em;
+        padding: .3em .8em;
+
+        @include media-up(md) {
+            padding: .8em 1em;
+        }
 
         & .level9__file {
-            font-size: 20px;
+            font-size: 14px;
             margin-top: .5em;
+            font-weight: bold;
 
-            & .level9__clue {
+            @include media-up(sm) {
                 font-size: 18px;
-                font-weight: bold;
+            }
+
+            @include media-up(md) {
+                font-size: 20px;
             }
         }
     }
 
     & .level9__guess-container {
-        margin: 1em 0;
         width: 100%;
-        font-size: 24px;
         font-weight: bold;
+        margin: .5em 0;
+        width: 100%;
+
+        @include media-up(sm) {
+            margin: 1em 0;
+        }
     }
 }
