--- a/src/components/Level10/Level10.scss
+++ b/src/components/Level10/Level10.scss
@@ -1,3 +1,14 @@
+$breakpoints:(sm: 350px,
+    md: 768px,
+    xl: 1200px,
+);
+
+@mixin media-up($breakpoint) {
+    @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
+        @content;
+    }
+}
+
 .level10__container {
     width: 100%;
     height: 100%;
@@ -21,13 +32,24 @@
             align-items: center;
 
             & .level10__column-header {
-                width: 2.5em;
-                height: 1em;
-                padding: .5em 1em;
-                margin: .2em;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                width: 1.1em;
+                height: 1em;
+                padding: .4em .8em;
+                margin: .1em;
+
+                @include media-up(sm) {
+                    width: 1.5em;
+                    padding: .5em .9em;
+                }
+
+                @include media-up(md) {
+                    width: 2.5em;
+                    padding: .5em 1em;
+                    margin: .2em;
+                }
             }
         }
 
@@ -40,33 +62,61 @@
                 align-items: center;
 
                 & .level10__row-header {
-                    width: 2.5em;
-                    height: 1em;
-                    padding: .5em 1em;
-                    margin: .2em;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    width: 1.1em;
+                    height: 1em;
+                    padding: .4em .8em;
+                    margin: .1em;
+
+                    @include media-up(sm) {
+                        width: 1.5em;
+                        padding: .5em .9em;
+                    }
+
+                    @include media-up(md) {
+                        width: 2.5em;
+                        padding: .5em 1em;
+                        margin: .2em;
+                    }
+
                 }
 
                 & .level10__row-text {
-                    width: 2.5em;
-                    height: 1em;
-                    padding: .5em 1em;
-                    margin: .2em;
                     background-color: #333333;
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    width: 1.1em;
+                    height: 1em;
+                    padding: .4em .8em;
+                    margin: .1em;
+
+                    @include media-up(sm) {
+                        width: 1.5em;
+                        padding: .5em .9em;
+                    }
+
+                    @include media-up(md) {
+                        width: 2.5em;
+                        padding: .6em 1em;
+                        margin: .2em;
+                    }
                 }
             }
         }
     }
 
     & .level10__guess-container {
-        margin: 1em 0;
+        margin: .5em 0;
         width: 100%;
-        font-size: 24px;
+        font-size: 18px;
         font-weight: bold;
+
+        @include media-up(md) {
+            margin: 1em 0;
+            font-size: 24px;
+        }
     }
 }
