--- a/src/components/Level15/Level15.scss
+++ b/src/components/Level15/Level15.scss
@@ -23,6 +23,7 @@ $breakpoints:(sm: 350px,
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
 
         & .level15__grid {
             display: flex;
@@ -32,8 +33,31 @@ $breakpoints:(sm: 350px,
             flex-wrap: wrap;
             width: calc(7.5rem + 4px);
             height: calc(7.5rem + 4px);
-            margin: .8rem;
+            margin: .5rem;
             position: relative;
+
+            @include media-up(sm) {
+                margin: .8rem;
+            }
+
+            @include media-up(xl) {
+                margin: 1.2rem;
+            }
+
+            &.level15__grid-3,
+            &.level15__grid-4 {
+                width: 6.5rem;
+                height: 6.5rem;
+                margin: .5rem auto;
+
+                @include media-up(sm) {
+                    margin: .8rem;
+                }
+
+                @include media-up(xl) {
+                    margin: 1.2rem;
+                }
+            }
 
             & .level15__grid-item {
                 width: 2.5rem;
@@ -219,7 +243,7 @@ $breakpoints:(sm: 350px,
             }
 
             & .level15__grid-line {
-                width: 10.6rem;
+                width: 9rem;
                 height: 2px;
                 position: absolute;
                 background-color: #fff;
