--- a/src/components/Level3/Level3.scss
+++ b/src/components/Level3/Level3.scss
@@ -66,6 +66,7 @@ $breakpoints:(sm: 350px,
         width: 100%;
         font-size: 18px;
         font-weight: bold;
+        padding: .5em;
 
         @include media-up(md) {
             margin: 1em 0;
