--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -37,3 +37,13 @@
         }
     }
 }
+
+@keyframes lds-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
