--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -18,10 +18,10 @@
             width: 144px;
             height: 144px;
             margin: 18px;
-            border: 18px solid #ff343f;
+            border: 18px solid #00b8f0;
             border-radius: 50%;
             animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-            border-color: #ff343f transparent transparent transparent;
+            border-color: #00b8f0 transparent transparent transparent;
 
             &:nth-child(1) {
                 animation-delay: -0.45s;
